--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aurelia-api-loopback-client",
-  "version": "1.1.1",
+  "name": "aurelia-orm-loopback-client",
+  "version": "2.0.0",
   "skeleton-version": "1.0.0-beta.1.2.2",
   "description": "A starter kit for building a standard navigation-style app with Aurelia.",
   "keywords": [
@@ -69,13 +69,14 @@
   "jspm": {
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
-      "aurelia-api": "npm:aurelia-api@^2.2.0",
+      "aurelia-api": "github:spoonx/aurelia-api@dev",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.2",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.2.0",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.2.1",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.2.0",
+      "aurelia-orm": "github:spoonx/aurelia-orm@dev",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.2.0",
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.2",
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.1",
