fix(server): typo and added initial data

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,7 +14,7 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
     "options": {
       "emailVerificationRequired": false
     },
