--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -77,7 +77,8 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "fetch": "github:github/fetch@^0.11.0",
-      "font-awesome": "npm:font-awesome@^4.5.0",
+      "font-awesome": "npm:font-awesome@^4.6.1",
+      "jquery": "npm:jquery@^2.2.3",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {}
