--- a/server/model-config.json
+++ b/server/model-config.json
@@ -13,7 +13,7 @@
       "./mixins"
     ]
   },
-  "User": {
+  "user": {
     "dataSource": "db",
     "options": {
       "emailVerificationRequired": false
