--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -61,14 +61,14 @@
   "jspm": {
     "dependencies": {
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.2.0",
-      "aurelia-api": "github:spoonx/aurelia-api@dev",
+      "aurelia-api": "npm:aurelia-api@^3.0.0-rc1",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.0",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.2.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.2.2",
       "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.2.0",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.2.1",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.2.0",
-      "aurelia-orm": "github:spoonx/aurelia-orm@dev",
+      "aurelia-orm": "npm:aurelia-orm@^3.0.0-rc1",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.2.0",
       "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.1.2",
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.2.1",
