--- a/client-wp/package.json
+++ b/client-wp/package.json
@@ -32,14 +32,14 @@
   },
   "homepage": "https://github.com/aurelia/skeleton-navigation#readme",
   "dependencies": {
-    "aurelia-api": "github:spoonx/aurelia-api#dev",
+    "aurelia-api": "^3.0.0-rc1",
     "aurelia-bootstrapper-webpack": "^1.0.0-beta.1.0.0",
     "aurelia-event-aggregator": "^1.0.0-beta.1.1.1",
     "aurelia-fetch-client": "^1.0.0-beta.1.1.0",
     "aurelia-framework": "^1.0.0-beta.1.1.3",
     "aurelia-history-browser": "^1.0.0-beta.1.1.2",
     "aurelia-logging-console": "^1.0.0-beta.1.1.4",
-    "aurelia-orm": "github:spoonx/aurelia-orm#dev",
+    "aurelia-orm": "^3.0.0-rc1",
     "aurelia-pal-browser": "^1.0.0-beta.1.1.4",
     "aurelia-polyfills": "^1.0.0-beta.1.0.0",
     "aurelia-router": "^1.0.0-beta.1.1.1",
