--- a/client/package.json
+++ b/client/package.json
@@ -66,26 +66,32 @@
     "yargs": "^2.1.1"
   },
   "jspm": {
+    "registry": "npm",
     "dependencies": {
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0",
-      "aurelia-api": "npm:aurelia-api@^3.0.0-rc8",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.1",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
-      "aurelia-orm": "npm:aurelia-orm@^3.0.0-rc6",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0",
-      "aurelia-router": "npm:aurelia-router@^1.0.2",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0",
+      "aurelia-animator-css": "^1.0.0",
+      "aurelia-api": "^3.0.0-rc8",
+      "aurelia-authentication": "^3.0.0-rc8",
+      "aurelia-bootstrapper": "^1.0.0",
+      "aurelia-datatable": "github:doktordirk/aurelia-datatable@statham",
+      "aurelia-fetch-client": "^1.0.0",
+      "aurelia-framework": "^1.0.1",
+      "aurelia-history-browser": "^1.0.0",
+      "aurelia-loader-default": "^1.0.0",
+      "aurelia-logging-console": "^1.0.0",
+      "aurelia-orm": "^3.0.0-rc6",
+      "aurelia-pager": "^0.0.10",
+      "aurelia-pal-browser": "^1.0.0",
+      "aurelia-polyfills": "^1.0.0",
+      "aurelia-router": "^1.0.2",
+      "aurelia-templating-binding": "^1.0.0",
+      "aurelia-templating-resources": "^1.0.0",
+      "aurelia-templating-router": "^1.0.0",
+      "aurelia-view-manager": "^0.0.7",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "fetch": "github:github/fetch@^1.0.0",
-      "font-awesome": "npm:font-awesome@^4.6.3",
-      "jquery": "npm:jquery@^2.2.4",
+      "font-awesome": "^4.6.3",
+      "get-prop": "^0.0.10",
+      "jquery": "^2.2.4",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {}
