--- a/client-ts-wp/package.json
+++ b/client-ts-wp/package.json
@@ -70,13 +70,15 @@
   "dependencies": {
     "aurelia-api": "github:doktordirk/aurelia-api#dev",
     "aurelia-bootstrapper-webpack": "^1.0.0",
+    "aurelia-datatable": "github:doktordirk/aurelia-datatable#statham",
     "aurelia-event-aggregator": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
     "aurelia-framework": "^1.0.1",
     "aurelia-history-browser": "^1.0.0",
     "aurelia-loader-webpack": "^1.0.2",
     "aurelia-logging-console": "^1.0.0",
-    "aurelia-orm": "github:doktordirk/aurelia-orm#dev",
+    "aurelia-orm": "^3.0.0-rc6",
+    "aurelia-pager": "0.0.10",
     "aurelia-pal-browser": "^1.0.0",
     "aurelia-polyfills": "^1.0.0",
     "aurelia-route-recognizer": "^1.0.0",
@@ -85,9 +87,11 @@
     "aurelia-templating-resources": "^1.0.0",
     "aurelia-templating-router": "^1.0.0",
     "aurelia-validation": "github:aurelia/validation#0.6.6",
+    "aurelia-view-manager": "0.0.7",
     "bluebird": "^3.4.1",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.6.3",
+    "homefront": "github:spoonx/homefront",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.0"
   },
