--- a/client-cli-es2015/package.json
+++ b/client-cli-es2015/package.json
@@ -9,11 +9,11 @@
   "license": "MIT",
   "dependencies": {
     "aurelia-animator-css": "^1.0.0",
-    "aurelia-api": "github:doktordirk/aurelia-api#dev",
+    "aurelia-api": "^3.0.0-rc9",
     "aurelia-bootstrapper": "^1.0.0",
-    "aurelia-datatable": "github:doktordirk/aurelia-datatable#statham",
+    "aurelia-datatable": "0.0.18",
     "aurelia-fetch-client": "^1.0.0",
-    "aurelia-orm": "github:doktordirk/aurelia-orm#testy",
+    "aurelia-orm": "^3.0.0-rc7",
     "aurelia-pager": "0.0.10",
     "aurelia-validation": "github:aurelia/validation#0.6.6",
     "aurelia-view-manager": "0.0.7",
@@ -25,39 +25,38 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "aurelia-cli": "^0.17.0",
+    "aurelia-cli": "^0.18.0",
     "aurelia-testing": "^1.0.0-beta.2.0.0",
-    "aurelia-tools": "^0.2.4",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-syntax-flow": "^6.8.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-loose": "^7.0.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-register": "^6.11.6",
-    "browser-sync": "^2.14.0",
+    "aurelia-tools": "^0.2.2",
+    "browser-sync": "^2.13.0",
+    "connect-history-api-fallback": "^1.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-babel": "^6.1.2",
     "gulp-changed-in-place": "^2.0.3",
-    "gulp-eslint": "^3.0.1",
-    "gulp-nodemon": "^2.1.0",
-    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-notify": "^2.2.0",
+    "minimatch": "^3.0.2",
+    "through2": "^2.0.1",
+    "uglify-js": "^2.6.3",
+    "vinyl-fs": "^2.4.3",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-register": "^6.9.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^2.0.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^1.1.2",
-    "karma-babel-preprocessor": "^6.0.1",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "minimatch": "^3.0.2",
-    "proxy": "^0.2.4",
-    "proxy-middleware": "^0.15.0",
-    "through2": "^2.0.1",
-    "uglify-js": "^2.7.0"
+    "karma-babel-preprocessor": "^6.0.1"
   }
 }
