--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -22,62 +22,64 @@
     "url": "http://github.com/aurelia/skeleton-navigation-typescript"
   },
   "scripts": {
-    "postinstall": "./node_modules/.bin/typings install",
+    "prepublish": "./node_modules/.bin/typings install",
     "test": "gulp test",
     "e2e": "gulp serve e2e"
   },
   "devDependencies": {
     "aurelia-bundler": "^0.4.0",
-    "aurelia-tools": "^0.2.3",
-    "browser-sync": "^2.13.0",
+    "aurelia-tools": "^0.2.4",
+    "browser-sync": "^2.17.0",
     "conventional-changelog": "1.1.0",
-    "del": "^2.2.1",
+    "del": "^2.2.2",
     "es6-module-loader": "^0.17.11",
     "gulp": "^3.9.1",
-    "gulp-bump": "^2.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-nodemon": "^2.0.6",
+    "gulp-bump": "^2.4.0",
+    "gulp-changed": "^1.3.2",
+    "gulp-htmlmin": "^2.0.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-protractor": "2.4.0",
+    "gulp-protractor": "3.0.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^5.0.0",
+    "gulp-tslint": "^6.1.2",
     "gulp-typescript": "^2.13.6",
     "isparta": "^4.0.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-systemjs": "^0.14.0",
-    "object.assign": "^4.0.3",
+    "karma-systemjs": "^0.15.0",
+    "object.assign": "^4.0.4",
     "proxy-middleware": "^0.15.0",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.2.1",
-    "systemjs": "0.19.31",
-    "tslint": "^3.11.0",
-    "typescript": ">=1.9.0-dev || ^2.0.0",
-    "typings": "^1.3.0",
+    "run-sequence": "^1.2.2",
+    "systemjs": "0.19.39",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
     "vinyl-paths": "^2.1.0",
-    "yargs": "^4.7.1"
+    "yargs": "^6.0.0"
   },
   "jspm": {
     "dependencies": {
-      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-rc.1.0.0",
-      "aurelia-api": "github:doktordirk/aurelia-api@dev",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-rc.1.0.1",
-      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-rc.1.0.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-rc.1.0.2",
-      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-rc.1.0.0",
-      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-rc.1.0.0",
-      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-rc.1.0.0",
-      "aurelia-orm": "github:doktordirk/aurelia-orm@dev",
-      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-rc.1.0.1",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-rc.1.0.0",
-      "aurelia-router": "npm:aurelia-router@^1.0.0-rc.1.0.1",
-      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-rc.1.0.1",
-      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-rc.1.0.1",
-      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-rc.1.0.1",
-      "aurelia-validation": "npm:aurelia-validation@0.6.6",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.1",
+      "aurelia-api": "npm:aurelia-api@^3.0.0-rc9",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.1",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.5",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0",
+      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0",
+      "aurelia-orm": "npm:aurelia-orm@^3.0.0-rc7",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.1.1",
+      "aurelia-router": "npm:aurelia-router@^1.0.5",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0",
+      "aurelia-validation": "npm:aurelia-validation@^0.13.0",
+      "bluebird": "npm:bluebird@3.4.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "fetch": "github:github/fetch@^1.0.0",
       "font-awesome": "npm:font-awesome@4.6.3",
